* 212 - Add playoff divisions to the list of divisions one can schedule
        finalists for.
* 223 - Add the ability to easily choose teams for playoff divisions 
        by judging station.
* 220 - Always auto-select top 1 finalist in finalist scheduling app
* 220 - If two teams are tied (within 1) select them both
* 213 - Allow finalist categories to be marked public/private. Add PDF
        and HTML outputs of the finalist schedule (public & private).
* 211 - make sure to schedule finalists that are more constrained first, this allows the finalist schedule to be as short as possible
* 187 - Refresh the playoff brackets when the division changes
* 204 - Allow score entry to update or insert a score in a safe manner
    under heavy load
* Disallow setting up the database from a computer other than localhost.
    This solves a number of issues around init and security given that
    the database is part of the webapp. If the database is moved out of the
    app, then this might work again.
* Allow team information to be edited after the playoffs are
* 165 - Allow one to bypass security when connecting from localhost.
* 200 - Allow team information to be edited after the playoffs are
  initialized. Team divisions cannot be changed after the playoffs are
  initialized to avoid issues with divisions and the playoffs.

Release 7.7
-----------
* Allow schedules to be in 12 hour or 24 hour format. All schedules are
  output in 12 hour format.
* Added support for generating a schedule for an odd number of teams
  with an odd number of performance rounds

Release 7.6
-----------
* Fix bug where scoresheets wouldn't print due to incorrect error
     checking

Release 7.5
-----------
* 164 - Add report for winners of the playoff brackets
* 177 - Give a more reasonable error message when an XML document fails to parse
* 188 - Display a reasonable error message to the user when no score sheets are selected to print

Release 7.4
---------